Changing Tetris Picture

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <h2>Tetris AI</h2>
                             <ul class = "more-work-table">
                                 <li>
-                                     <img src = "Pictures/DIY-Hero.JPG" height =  "80px">
+                                     <img src = "Pictures/Tetris.JPG" height =  "80px">
                                 </li>
                                 <li>
                                     This was a solo project where I used reinforcement algorithms to teach my AI to learn how to play Tetris. I worked on this for about a week in total.
