--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <h3>Team Size:</h3>
                                 <p>12 People, 1 Producer, 4 Designers, 4 Artists <br> and 3 Programmers</p>
                                 <h3>My Responsibilities:</h3>
-                                <p>Gameplay programming (f.e. Hazards) <br> and VFX</p>
+                                <p>Gameplay programming (e.g. Hazards) <br> and VFX</p>
                                 <h3>Trailer:</h3>
                                 <p><a href = "https://youtu.be/2vPxmQ4hcLo" target="_blank">Link to the trailer</a></p>
                                 <h3>Download:</h3>
@@ -103,7 +103,7 @@
                                 <h3>Team Size:</h3>
                                 <p>9 People, 2 Designers, 4 Artists, <br> 1 Musician and 2 Programmers</p>
                                 <h3>My Responsibilities:</h3>
-                                <p>Gameplay programming (f.e. Dynamic Camera) </p>
+                                <p>Gameplay programming (e.g. Dynamic Camera) </p>
                                 <h3>Trailer:</h3>
                                 <p><a href = "https://youtu.be/MZ4TVYB_p-Y" target="_blank">Link to the trailer</a></p>
                                 <h3>Notable Achievements:</h3>
