Fixed minor issues

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                      <img src = "Pictures/AmpleMan.JPG" height =  "80px">
                                 </li>
                                 <li>
-                                    AmpleEngine is what two of my classmates and me called our own custom 2D Game Engine that we were supposed to make a MegaMan X2 Clone upon. The engine is a pure Entity-Component System. I was responsible for the Physics, Gameplay Mechanics and Enemy AI. I also build the levels using our custom level editor tool. The engine was created in C++ from scratch.
+                                    AmpleEngine is what two of my classmates and me called our own custom 2D Game Engine that we were supposed to make a MegaMan X2 Clone upon. The engine is a pure Entity-Component System. I was responsible for the Physics, Gameplay Mechanics and Enemy AI. I also built the levels using our custom level editor tool. The engine was created in C++ from scratch.
                                </li>
                                <li>
                                     <a href = "https://youtu.be/eaqMT4yVOR0" target="_blank">Link to a showcase video</a>
@@ -186,7 +186,7 @@
                         </li>
                         <li class = "about-me-listpoint">
                             My experience with <br>
-                            <h3>Programming languages</h3>
+                            <h3>Programming Languages</h3>
                             <ul class = "icon-list">
                                 <li><img class = "icon" src = "Pictures/Icons/C++.svg" onclick = "parent.open('https://en.wikipedia.org/wiki/C%2B%2B')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/CSharp.svg" onclick = "parent.open('https://en.wikipedia.org/wiki/C_Sharp_(programming_language)')"></li>
@@ -202,7 +202,7 @@
                         </li>
                         <li class = "about-me-listpoint">
                             My experience with <br>
-                            <h3>Development Software</h3>
+                            <h3>Development Softwares</h3>
                             <ul class = "icon-list">
                                 <li><img class = "icon" src = "Pictures/Icons/VS.svg" onclick = "parent.open('https://visualstudio.microsoft.com/')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/VSC.svg" onclick = "parent.open('https://visualstudio.microsoft.com/')"></li>
@@ -230,8 +230,6 @@
                                 <li>Tasmanstraat 1</li>
                                 <li>4812GK Breda</li>
                                 <li>Netherlands</li>
-                                <li><br></li>
-                                <li>+49 1573 8173162</li>
                             </ul>
                             <h3>My social links:</h3>
                             <ul class = "icon-list">
