--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </ul>
             </nav>
             <nav class="smooth"> 
-                <section id="home">
+                <section class="big-section" id="home">
                     <div>
                         <h2 class="introduction">
                             Hi! <br>
@@ -30,7 +30,7 @@
                     </div>
                 </section>
 
-                <section id="work">
+                <section class="big-section" id="work">
                     <!--Here is where I would add the header-->
                     <h1 class = "page-title work-title">My work</h1>
                     <div class="card middle">
@@ -41,7 +41,7 @@
                                 Crowd King was my year two project at Breda University of Applied Sciences. It is a cute platformer and available for download on itch.io
                             </p>
                         </div>
-                        <div class = "back">
+                        <div class = "back" onclick="window.location.href='html/CrowdKing.html';">
                             <div class = "back-content middle">
                                 <h3>Engine: </h3>
                                 <p>Unreal Engine 4</p>
@@ -69,7 +69,7 @@
                                 It was created for the Raspberry Pi and developed with a given framework in C++.
                             </p>
                         </div>
-                        <div class = "back">
+                        <div class = "back" onclick="window.location.href='html/Empires.html';">
                             <div class = "back-content middle">
                                 <h3>Languages: </h3>
                                 <p>C++</p>
@@ -92,7 +92,7 @@
                                 DIY Hero was a team project at the end of the first year at Breda University of Applied Sciences. It is a third-person game in which a little boy has to fight a tomato.
                             </p>
                         </div>
-                        <div class = "back">
+                        <div class = "back" onclick="window.location.href='html/DIYHero.html';">
                             <div class = "back-content middle">
                                 <h3>Engine: </h3>
                                 <p>Unreal Engine 4</p>
@@ -114,13 +114,13 @@
                     <button class = "btn btn2 more-work-btn" onclick = "window.location.href='#all-work';">View more work</button>
                 </section>
 
-                <section id="all-work">
+                <section  class="big-section" id="all-work">
                     <ul class = "more-work-list">
-                        <li>
+                        <li onclick="window.location.href='html/TetrisAI.html';">
                             <h2>Tetris AI</h2>
                             <ul class = "more-work-table">
                                 <li>
-                                     <img src = "Pictures/Tetris.JPG" height =  "80px">
+                                     <img src = "Pictures/Tetris.JPG" height =  "80px"> <!-- TODO ADD BETTER IMAGE-->
                                 </li>
                                 <li>
                                     This was a solo project where I used reinforcement algorithms to teach my AI to learn how to play Tetris. I worked on this for about a week in total.
@@ -130,11 +130,11 @@
                                </li>
                             </ul>
                         </li>
-                        <li>
+                        <li onclick="window.location.href='html/AmpleEngine.html';">
                             <h2>Ampleman Engine</h2>
                             <ul class = "more-work-table">
                                 <li>
-                                     <img src = "Pictures/AmpleMan.JPG" height =  "80px">
+                                     <img src = "Pictures/AmpleMan.JPG" height =  "80px"> <!-- TODO ADD BETTER IMAGE-->
                                 </li>
                                 <li>
                                     AmpleEngine is what two of my classmates and me called our own custom 2D Game Engine that we were supposed to make a MegaMan X2 Clone upon. The engine is a pure Entity-Component System. I was responsible for the Physics, Gameplay Mechanics and Enemy AI. I also built the levels using our custom level editor tool. The engine was created in C++ from scratch.
@@ -144,22 +144,22 @@
                                </li>
                             </ul>
                         </li>
-                        <li>
+                        <li onclick="window.location.href='html/RayTracer.html';">
                             <h2>RayTracer</h2>
                             <ul class = "more-work-table">
                                 <li>
-                                     <img src = "Pictures/RayTracer.png" height =  "80px">
+                                     <img src = "Pictures/RayTracer.png" height =  "80px"> <!-- TODO ADD BETTER IMAGE-->
                                 </li>
                                 <li>
                                     In my first year of University we were tasked with creating a ray tracer from scratch in C++. It was not real-time needing about 10 seconds for every frame, but it had reflection and refraction on spheres and cuboids.
                                </li>
                             </ul>
                         </li>
-                        <li>
+                        <li onclick="window.location.href='html/HammerFly.html';">
                             <h2>Hammer Fly</h2>
                             <ul class = "more-work-table">
                                 <li>
-                                     <img src = "Pictures/hammerfly.png" height =  "80px">
+                                     <img src = "Pictures/hammerfly.png" height =  "80px"> <!-- TODO ADD BETTER IMAGE-->
                                 </li>
                                 <li>
                                     Hammer Fly is a personal project I worked on. I made it in Unity on my own. Some assets are from Kenney Assets and some are created by me. I developed it for Android and it is currently available on the Play Store
@@ -172,7 +172,7 @@
                     </ul>
                 </section>
 
-                <section id="about me">
+                <section class="big-section" id="about me">
                     <ul class = "about-me-list">
                         <li class = "about-me-listpoint">
                             <h1 class = "page-title">About me</h1>
@@ -213,6 +213,8 @@
                                 <li><img class = "icon" src = "Pictures/Icons/blender.svg" onclick = "parent.open('https://www.blender.org/')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/trello.svg" onclick = "parent.open('https://trello.com/en')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/Jenkins.svg" onclick = "parent.open('https://www.jenkins.io/')"></li>
+                                <li><img class = "icon" src = "Pictures/Icons/github.svg" onclick = "parent.open('https://www.https://github.com/')"></li>
+                                <li><img class = "icon" src = "Pictures/Icons/rider.png" onclick = "parent.open('https://www.jetbrains.com/rider/')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/jira.svg" onclick = "parent.open('https://www.atlassian.com/software/jira')"></li>
 
                             </ul>
@@ -220,7 +222,7 @@
                     </ul>
                 </section>
 
-                <section id="contact">
+                <section class="big-section" id="contact">
                     <ul class = "about-me-list">
                         <li class = "about-me-listpoint">
                             <h1 class = "page-title">Contact me</h1>
