Editing Work Pages

--- a/html/Empires.html
+++ b/html/Empires.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Crowd King</title>
+    <title>Empires</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <section class="work-section">
         <div class="work-div">
-            <img src="/Pictures/CrowdKing.png" align="center"></img>
+            <img src="/Pictures/Empires.JPG" align="center"></img>
         </div>
         <div class="work-div">
             <h1> What was the project?</h1>
-            <p> Crowd King was one of my year two project at Breda University of Applied Sciences. It is a cute platformer and available for download on <a href=https://igad.itch.io/crowdking>itch.io</a> </p>
-            <p> I worked on it in a team of 12 People: 1 Producer, 4 Designers, 4 Artists and 3 Programmers </p>
-            <p> We created the game in Unreal Engine using C++ and Blueprints. My responsibilities were Gameplay Programming and making the VFX. More Details below. </p>
+            <p>This was one of my year one projects at University. We were tasked to create a 3D Real Time Strategy game set in space, that would run on the raspberry pi. </p>
+            <p>We had 8 Weeks for this project, and it was done entirely in C++. We were given a small framework, but had to improve the renderer and such in order for it to run properly.</p>
         </div>
         <div class="work-div">
-            <h1> The Trailer </h1>
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/2vPxmQ4hcLo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            <h1> The Showcase Video </h1>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/qhMKtv_QTew" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>  
             </iframe>
         </div>
         <div class="work-div">
             <h1> What did I learn from the project?</h1>
-            <p> 
-                Working in a bigger team like this is always a valuable experience. This was also the first time using C++ for Unreal instead of just blueprints, and while I did not create a huge quantity of things in C++, it did give me a good insight into what has to be done in order to use C++ effectively in Unreal Engine. 
-                <br> 
-                This project was also the first time I ever made or used VFX, so I learned how to use the Unreal Particle Editor, understand the UI surrounding it and what the possibilities for it are. 
-            </p>
+            <p>This project was the first time developing something for another target platform. I have never used a raspberry pi before, so getting used to that was an additional challenge. For the game, I took inspiration from Stellaris. I learned how to optimize your game so that it can run on devices with low specs, how to create RTS AI, how to create an UI System and how to make a UI/UX Plan.</p>
         </div>
         <div class="work-div">
             <h1> Creating Temporary Flocking </h1>
