--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <h3>Trailer:</h3>
                                 <p><a href = "https://youtu.be/MZ4TVYB_p-Y" target="_blank">Link to the trailer</a></p>
                                 <h3>Notable Achievements:</h3>
-                                <p>This game was featured the Unreal Engine <br> Student Showcase Spring 2020 </p>
+                                <p>This game was featured in the Unreal Engine <br> Student Showcase Spring 2020 </p>
                             </div>
                         </div>
                     </div>
@@ -215,6 +215,7 @@
                                 <li><img class = "icon" src = "Pictures/Icons/Jenkins.svg" onclick = "parent.open('https://www.jenkins.io/')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/github.svg" onclick = "parent.open('https://www.https://github.com/')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/rider.png" onclick = "parent.open('https://www.jetbrains.com/rider/')"></li>
+                                <li><img class = "icon" src = "Pictures/Icons/Monday.svg" onclick = "parent.open('https://www.monday.com')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/jira.svg" onclick = "parent.open('https://www.atlassian.com/software/jira')"></li>
 
                             </ul>
