Updating More Work Page

--- a/html/MoreWork.html
+++ b/html/MoreWork.html
@@ -12,38 +12,95 @@
         <div class="more-work-div" onclick="window.location.href='CrowdKing.html';">
             <table>
                 <tr>
-                    <td id="Reihe1">
+                    <td id="Row1">
                         <img src="../Pictures/CrowdKing.png"></src></td>
-                    <td id="Reihe2">Crowd King is a top down platformer where you have to get through the level collecting as many minions as you can. Click for more info.</td>
-                    <td id="Reihe3">Team Size: 12 <br> Time: 8 Weeks <br> Languages: C++ and Blueprints</td>
+                    <td id="Row2">Crowd King is a top down platformer where you have to get through the level collecting as many minions as you can. Click for more info.</td>
+                    <td id="Row3">Team Size: 12 <br> Time: 8 Weeks <br> Languages: C++ and Blueprints</td>
                 </tr>
             </table>
         </div>
         <div class="more-work-div" onclick="window.location.href='Empires.html';">
             <table>
                 <tr>
-                    <td id="Reihe1">
+                    <td id="Row1">
                         <img src="../Pictures/Empires.JPG"></src></td>
-                    <td id="Reihe2">Empires is a RTS Game set in space, that was created for the Raspberry Pi. Click for more info.</td>
-                    <td id="Reihe3">Team Size: 1 <br> Time: 8 Weeks  <br> Languages: C++</td>
+                    <td id="Row2">Empires is a RTS Game set in space, that was created for the Raspberry Pi. Click for more info.</td>
+                    <td id="Row3">Team Size: 1 <br> Time: 8 Weeks  <br> Language: C++</td>
                 </tr>
             </table>
         </div>
         <div class="more-work-div" onclick="window.location.href='DIYHero.html';">
             <table>
                 <tr>
-                    <td id="Reihe1">
+                    <td id="Row1">
                         <img src="../Pictures/DIY-Hero.JPG"></src></td>
-                    <td id="Reihe2">DIY Hero is a top down game, in which you play a little boy having to fight vegtables. Click for more info.</td>
-                    <td id="Reihe3">Team Size: 9 <br> Time: 8 Weeks  <br> Languages: Blueprints</td>
+                    <td id="Row2">DIY Hero is a top down game, in which you play a little boy having to fight vegtables. Click for more info.</td>
+                    <td id="Row3">Team Size: 9 <br> Time: 8 Weeks  <br> Language: Blueprints</td>
+                </tr>
+            </table>
+        </div>
+        <div class="more-work-div" onclick="window.location.href='TetrisAI.html';">
+            <table>
+                <tr>
+                    <td id="Row1">
+                        <img src="../Pictures/Tetris.JPG"></src></td>
+                    <td id="Row2">I used genetic algorithms to teach my AI how to play Tetris. Click for more info.</td>
+                    <td id="Row3">Team Size: 1 <br> Time: 2 Weeks  <br> Language: C++</td>
+                </tr>
+            </table>
+        </div>
+        <div class="more-work-div" onclick="window.location.href='AmpleEngine.html';">
+            <table>
+                <tr>
+                    <td id="Row1">
+                        <img src="../Pictures/AmpleMan.JPG"></src></td>
+                    <td id="Row2">As a school project I had to create an engine and create a Megaman x2 clone with it. Click for more info.</td>
+                    <td id="Row3">Team Size: 3 <br> Time: 8 Weeks  <br> Language: C++</td>
+                </tr>
+            </table>
+        </div>
+        <div class="more-work-div" onclick="window.location.href='RayTracer.html';">
+            <table>
+                <tr>
+                    <td id="Row1">
+                        <img src="../Pictures/RayTracer.png"></src></td>
+                    <td id="Row2">In the first year of university, we had to create a (non-realtime) Ray Tracer that can handle reflection and refraction. Click for more info.</td>
+                    <td id="Row3">Team Size: 1 <br> Time: 8 Weeks  <br> Language: C++</td>
+                </tr>
+            </table>
+        </div>
+        <div class="more-work-div" onclick="window.location.href='HammerFly.html';">
+            <table>
+                <tr>
+                    <td id="Row1">
+                        <img src="../Pictures/hammerfly.png"></src></td>
+                    <td id="Row2">Hammer Fly is a mobile app that I created as a personal project. Click for more info.</td>
+                    <td id="Row3">Team Size: 1 <br> Time: 8 Weeks  <br> Language: C#</td>
                 </tr>
             </table>
         </div>
         <div class="more-work-header-div">
             <p> - Other Programming Projects - </p>
         </div>
-        <div class="more-work-div">
-            <p> - Other Programming Projects - </p>
+        <div class="more-work-div" onclick="window.location.href='';">
+            <table>
+                <tr>
+                    <td id="Row1">
+                        <img src="../Pictures/Portfolio.png"></src></td>
+                    <td id="Row2">I created this Portfolio Website myself from Scratch using nothing but HTML5 and CSS. <a href="https://github.com/MartinSchenkel/PortfolioWebsite">Github Link.</a> Click for more info.</td>
+                    <td id="Row3">Team Size: 1 <br> Languages: HTML5 and CSS</td>
+                </tr>
+            </table>
+        </div>
+        <div class="more-work-div" onclick="window.location.href='';">
+            <table>
+                <tr>
+                    <td id="Row1">
+                        <img src="../Pictures/webscraper.png"></src></td>
+                    <td id="Row2">I created a Python Webscraper to fetch gamestats of me and my friends so that we can display them on our website. Click for more info.</td>
+                    <td id="Row3">Team Size: 1 <br> Time: 1 Week  <br> Language: Python</td>
+                </tr>
+            </table>
         </div>
         <div class="more-work-header-div">
             <p> - Other Projects - </p>
