--- a/index.html
+++ b/index.html
@@ -111,67 +111,8 @@
                             </div>
                         </div>
                     </div>
-                    <button class = "btn btn2 more-work-btn" onclick = "window.location.href='#all-work';">View more work</button>
+                    <button class = "btn btn2 more-work-btn" onclick = "window.location.href='html/MoreWork.html';">View more work</button>
                 </section>
-
-                <section  class="big-section" id="all-work">
-                    <ul class = "more-work-list">
-                        <li onclick="window.location.href='html/TetrisAI.html';">
-                            <h2>Tetris AI</h2>
-                            <ul class = "more-work-table">
-                                <li>
-                                     <img src = "Pictures/Tetris.JPG" height =  "80px"> <!-- TODO ADD BETTER IMAGE-->
-                                </li>
-                                <li>
-                                    This was a solo project where I used reinforcement algorithms to teach my AI to learn how to play Tetris. I worked on this for about a week in total.
-                               </li>
-                               <li>
-                                    <a href = "https://youtu.be/yScEzGzCr3c" target="_blank">Link to a showcase video</a>
-                               </li>
-                            </ul>
-                        </li>
-                        <li onclick="window.location.href='html/AmpleEngine.html';">
-                            <h2>Ampleman Engine</h2>
-                            <ul class = "more-work-table">
-                                <li>
-                                     <img src = "Pictures/AmpleMan.JPG" height =  "80px"> <!-- TODO ADD BETTER IMAGE-->
-                                </li>
-                                <li>
-                                    AmpleEngine is what two of my classmates and me called our own custom 2D Game Engine that we were supposed to make a MegaMan X2 Clone upon. The engine is a pure Entity-Component System. I was responsible for the Physics, Gameplay Mechanics and Enemy AI. I also built the levels using our custom level editor tool. The engine was created in C++ from scratch.
-                               </li>
-                               <li>
-                                    <a href = "https://youtu.be/eaqMT4yVOR0" target="_blank">Link to a showcase video</a>
-                               </li>
-                            </ul>
-                        </li>
-                        <li onclick="window.location.href='html/RayTracer.html';">
-                            <h2>RayTracer</h2>
-                            <ul class = "more-work-table">
-                                <li>
-                                     <img src = "Pictures/RayTracer.png" height =  "80px"> <!-- TODO ADD BETTER IMAGE-->
-                                </li>
-                                <li>
-                                    In my first year of University we were tasked with creating a ray tracer from scratch in C++. It was not real-time needing about 10 seconds for every frame, but it had reflection and refraction on spheres and cuboids.
-                               </li>
-                            </ul>
-                        </li>
-                        <li onclick="window.location.href='html/HammerFly.html';">
-                            <h2>Hammer Fly</h2>
-                            <ul class = "more-work-table">
-                                <li>
-                                     <img src = "Pictures/hammerfly.png" height =  "80px"> <!-- TODO ADD BETTER IMAGE-->
-                                </li>
-                                <li>
-                                    Hammer Fly is a personal project I worked on. I made it in Unity on my own. Some assets are from Kenney Assets and some are created by me. I developed it for Android and it is currently available on the Play Store
-                               </li>
-                               <li>
-                                    <a href = "https://play.google.com/store/apps/details?id=com.DefaultCompany.HammerFly" target="_blank">Link to Google Play Store</a>
-                               </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </section>
-
                 <section class="big-section" id="about me">
                     <ul class = "about-me-list">
                         <li class = "about-me-listpoint">
@@ -213,7 +154,7 @@
                                 <li><img class = "icon" src = "Pictures/Icons/blender.svg" onclick = "parent.open('https://www.blender.org/')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/trello.svg" onclick = "parent.open('https://trello.com/en')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/Jenkins.svg" onclick = "parent.open('https://www.jenkins.io/')"></li>
-                                <li><img class = "icon" src = "Pictures/Icons/github.svg" onclick = "parent.open('https://www.https://github.com/')"></li>
+                                <li><img class = "icon" src = "Pictures/Icons/github.svg" onclick = "parent.open('https://github.com/')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/rider.png" onclick = "parent.open('https://www.jetbrains.com/rider/')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/Monday.svg" onclick = "parent.open('https://www.monday.com')"></li>
                                 <li><img class = "icon" src = "Pictures/Icons/jira.svg" onclick = "parent.open('https://www.atlassian.com/software/jira')"></li>
