--- a/html/TetrisAI.html
+++ b/html/TetrisAI.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Crowd King</title>
+    <title>Tetris AI</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
